# light

./: .gitignore  CMakeLists.txt  CMakePresets.json  meson.build  readme.md  version.hpp.in
.github/workflows/: build-and-test.yml
client/: CMakeLists.txt
cmake/: PackageConfig.cmake.in
doc/: bibliography.md
include/: erased.hpp  light.hpp  news.hpp
source/: CMakeLists.txt
source/include/: example.hpp
source/include/core/image/: channel.hpp
source/include/core/io/image/: ppm-io.hpp
source/include/core/maths/: commons.hpp  vec3.hpp
source/include/core/maths/samplers/: uniform-sampler.hpp  van-der-corput.hpp
source/include/renderer/: shape-list.hpp  sphere.hpp
source/src/: example.cpp  main.cpp
source/src/core/optics/: intersection.cpp  material.cpp  ray.cpp  shape.cpp
source/src/renderer/: camera.cpp  sphere.cpp
src/: light.cpp
test/: CMakeLists.txt  main.cpp
test/cases/: example.cpp
tests/: erased.cpp  light.cpp
